--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,26 @@
 .about{
     padding: 40px 0 60px;
 }
-.about .wrap .item{
+.about .item{
     width: 300px;
     margin: 0 10px;
     text-align: center;
 }
+.about .item h3{
+    color: #000;
+    transition: .5s;
+}
+.about .item p{
+    color: #000;
+    transition: .5s;
+}
+.about .item:hover h3{
+    color: #fa0;
+}
+.about .item:hover p{
+    color: #fa0;
+}
+
 
 .about > h2{
     width: 100%;
