--- a/css/style.css
+++ b/css/style.css
@@ -1,160 +1,18 @@
-.header {
-    display: flex;
-    padding: 6px 10px;
-    background: #000;
+.box{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #f00;
+}
+.box1{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: #f00;
+    animation: hans .5s infinite alternate;
 }
 
-.header .logo {
-    display: inline-block;
-    padding: 6px ;
-}
-
-.header nav {
-    text-align: center;
-    width: 100%;
-    font-size: 0;
-}
-
-.header nav a {
-    display: inline-block;
-    line-height: 52px;
-    font-size: 16px;
-    color: #fff;
-    text-decoration: none;
-    padding:0 10px;
-}
-
-.header nav a:hover{
-    background-color: #fa0;
-}
-
-.banner img{
-    width: 100%;
-}
-
-.path{
-    display: flex;
-}
-
-.path li{
-    padding: 6px 8px;
-}
-
-.path li a{
-    color: #aaa;
-    text-decoration: none;
-    font-size: 15px;
-}
-
-.path li+li::before{
-    content: '/';
-    color: #aaa;
-}
-.item h3{
-    font-size: 36px;
-    padding: 0 0 30px;
-}
-
-.wrap{
-    width: 960px;
-    margin: auto;
-}
-.about .wrap{
-    display: flex;
-}
-
-.about{
-    padding: 40px 0 60px;
-}
-.about .item{
-    width: 300px;
-    margin: 0 10px;
-    text-align: center;
-}
-.about .item h3{
-    color: #000;
-    transition: .5s;
-}
-.about .item p{
-    color: #000;
-    transition: .5s;
-}
-.about .item:hover h3{
-    color: #fa0;
-}
-.about .item:hover p{
-    color: #fa0;
-}
-
-
-.about > h2{
-    width: 100%;
-    font-size: 42px;
-    margin: auto;
-    text-align: center;
-    padding: 20px 0;
-}
-
-.about > p{
-    width: 660px;
-    margin: auto;
-    padding: 0 0 40px;
-    text-align: center;
-}
-
-.products{
-    background-color: #ccc;
-}
-.products .wrap{
-    display: flex;
-}
-
-.products .item{
-    width: 50%;
-    
-}
-.products .item img{
-    width: 100%;
-    vertical-align: bottom;
-}
-.products .text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 20px;
-    text-align: center;
-}
-.service{
-    padding: 40px 0;
-}
-.service > h2{
-    width: 960px;
-    margin:auto;
-    text-align:center;
-    font-size: 42px;
-    padding: 20px 0;
-}
-.service > p{
-    width: 960px;
-    margin:auto;
-    text-align:center;
-    padding-bottom: 40px;
-}
-.service .wrap{
-    display: flex;
-}
-.service .item{
-    margin: 0 10px;
-    width: 300px;
-    text-align: center;
-}
-.service .item img{
-    width: 100%;
-}
-
-footer{
-    text-align: center;
-    background-color: #000;
-    color: #fff;
-    padding: 20px 0;
+@keyframes hans{
+    0%{ border-radius: 50%;}
+    100%{ border-radius: 0%;}
 }
